<resources>
    <string name="app_name">Cash Book</string>

    <string name="login_button">LOGIN</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="field_patient_name">Patient name: </string>
    <string name="field_patient_cpf">CPF: </string>
    <string name="field_receipt_date">Receipt date: </string>
    <string name="field_receipt_value">Receipt value: </string>
    <string name="enter_patient_name">Patient name here</string>
    <string name="enter_patient_cpf">Patient CPF here</string>
    <string name="enter_receipt_date">Receipt date here</string>
    <string name="enter_receipt_value">Receipt value here</string>
</resources>
