<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Patient name -->
    <TextView
        android:id="@+id/post_patient_name"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:textStyle="bold"
        tools:text="@string/enter_patient_name" />

    <!-- Patient CPF -->
    <TextView
        android:id="@+id/post_patient_cpf"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        tools:text="@string/enter_patient_cpf" />

    <!-- Receipt date -->
    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="@string/enter_receipt_date" />

    <!-- Receipt value -->
    <TextView
        android:id="@+id/post_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="@string/enter_receipt_value" />

</LinearLayout>
